--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="app.css">
 
   <!-- External css  -->
-  
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
 
   <!-- External JS -->
   <script type="text/javascript" src="external_lib/angular.min.js"></script>
@@ -20,6 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
   <script type="text/javascript" src="external_lib/angular_ui_router.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
   <!-- Custom JS -->
   <script type="text/javascript" src="app.js"></script>
@@ -29,7 +30,7 @@
 </head>
 
 <body>
-  <a ui-sref="table">League Table</a>
+  <a ui-sref="table" class="md-raised">League Table</a>
   <div ui-view></div>
 </body>
 </html>
